[project]
name = "agent-runner-lab"
version = "0.1.0"
description = "Local-first evaluation workbench for RAG and tool-using agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bhuvan M", email = "bhuvanmdev@gmail.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
arl = "agent_runner_lab.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

